--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "server",
+  "version": "1.0.0",
+  "main": "server.js",
+  "type": "module",
+  "scripts": {
+    "server": "nodemon server.js",
+    "start": "node server.js"
+  },
   "dependencies": {
     "axios": "^1.13.2",
     "cloudinary": "^2.8.0",
@@ -9,5 +17,9 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
-  }
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
