feat: add inngest to webhook clerk

--- a/server/package.json
+++ b/server/package.json
@@ -8,11 +8,13 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@clerk/express": "^1.7.60",
     "axios": "^1.13.2",
     "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "inngest": "^3.48.1",
     "mongoose": "^9.0.2"
   },
   "devDependencies": {
